[package]
name = "multiqueue"
version = "0.1.1"
authors = ["Sam Schetterer <samschet@gmail.com>"]
license = "MIT"
description = "A fast mpmc multicast queue"
repository = "https://github.com/schets/multiqueue"
documentation = "https://docs.rs/multiqueue"
readme = "Readme.md"
keywords = ["queue", "mpmc", "lockless", "broadcast", "message"]


[dependencies]
crossbeam = "0.2"
futures = "0.1.9"
smallvec = "0.3.1"
parking_lot = "0.3"
time = "0.1.35"
